@@ -36,6 +36,7 @@ Date: 2025-12-19
     - Updated the two steel items graphics and their technology icons.
     - Moved noble gas producitvity research to be behind lanthanides.
     - Updated sodium carbonate/bicarbonate icons, and gave them variations.
+    - Moved vinyl bromide PMMA to be behind alkali science.
 
   Fixes:
     - Fixed bismuth chunk leeching icon being old.
